--- a/drupal8_bootstrap_subtheme.info.yml
+++ b/drupal8_bootstrap_subtheme.info.yml
@@ -22,3 +22,5 @@ regions:
 libraries:
   - 'drupal8_bootstrap_subtheme/global-styling'
   - 'drupal8_bootstrap_subtheme/global-scripts'
+  - 'drupal8_bootstrap_subtheme/wow_css'
+  - 'drupal8_bootstrap_subtheme/wow_js'
