--- a/drupal8_bootstrap_subtheme.libraries.yml
+++ b/drupal8_bootstrap_subtheme.libraries.yml
@@ -8,6 +8,12 @@ global-styling:
 style_rtl:
   css:
     theme:
+      https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css: {type: external, minified: true}
+
+
+wow_css:
+  css:
+    theme:
       https://cdnjs.cloudflare.com/ajax/libs/bootstrap-rtl/3.4.0/css/bootstrap-rtl.min.css: {type: external, minified: true}
 
 
@@ -18,3 +24,9 @@ style_rtl:
 global-scripts:
       js:
         js/custom.js: {}
+
+
+
+wow_js:
+      js:
+        https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js: {type: external, minified: true}
