--- a/drupal8_bootstrap_subtheme.libraries.yml
+++ b/drupal8_bootstrap_subtheme.libraries.yml
@@ -5,18 +5,16 @@ global-styling:
 
 
 
-style_rtl:
+css_style_rtl:
   css:
     theme:
-      https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css: {type: external, minified: true}
+      https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css: {type: external, minified: true}
 
 
-wow_css:
+css_style_ltr:
   css:
     theme:
-      https://cdnjs.cloudflare.com/ajax/libs/bootstrap-rtl/3.4.0/css/bootstrap-rtl.min.css: {type: external, minified: true}
-
-
+      css/custom_ltr.css: {}
 
 
 
@@ -26,6 +24,11 @@ global-scripts:
         js/custom.js: {}
 
 
+
+wow_css:
+  css:
+    theme:
+      https://cdnjs.cloudflare.com/ajax/libs/bootstrap-rtl/3.4.0/css/bootstrap-rtl.min.css: {type: external, minified: true}
 
 wow_js:
       js:
