add html elements

--- a/drupal8_bootstrap_subtheme.libraries.yml
+++ b/drupal8_bootstrap_subtheme.libraries.yml
@@ -1,12 +1,9 @@
-global-styling:
+global-style:
   css:
     theme:
       css/style.css: {}
-
-
-global-scripts:
-      js:
-        js/custom.js: {}
+  js:
+      js/custom.js: {}
 
 
 
