--- a/bootstrap_subtheme.info.yml
+++ b/bootstrap_subtheme.info.yml
@@ -2,8 +2,8 @@ core: 8.x
 type: theme
 base theme: bootstrap
 
-name: 'Drupal 8 Bootstrap Subtheme'
-description: 'Custmize Drupal 8 Bootstrap Subtheme'
+name: 'Bootstrap Subtheme'
+description: 'Custmize Drupal 8 Bootstrap Subtheme RTL & LTR'
 
 regions:
   navigation: 'Navigation'
